# todddo-openapi-rs

./: .travis.yml  Cargo.toml  README.md
api/: Cargo.toml  README.md  build.rs
api/src/: lib.rs
api/src/controllers/: README.md  todo_controller.rs
api/src/handlers/: todo_routes_handler.rs
api/src/models/: common.rs  todo.rs
api/static/: index.html
domain/: Cargo.toml  README.md
domain/src/: lib.rs  todo.rs
domain/src/services/: todo_service.rs
infra/: Cargo.toml  README.md
infra/src/: lib.rs
infra/src/in_mem/: todo_repo.rs
src/: README.md  main.rs
